# extended-market-maker

./: .env.example  .gitignore  .gitmodules  AUDIT_REPORT.md  LICENSE  MM_CONFIG_GUIDE.md  PLAN.md  README.md  pyproject.toml  setup.sh
config/: market_scout_policy.yaml
docs/: config_proposals.md  scout_paper_markout.md
scripts/: analyse_mm_journal.py  extract_mm_baseline.py  generate_policy.py  journal_analysis_sections.py  mm_advisor_apply.py  mm_advisor_loop.py  mm_advisor_run.sh  mm_advisor_submit.py  mm_autotune_loop.py  mm_openclaw_controller.sh  mm_openclaw_fleet.sh  openclaw_mm_operator_prompt.md  run_market_maker.py  screen_mm_markets.py
tests/: conftest.py  test_adverse_selection_defenses.py  test_analyse_mm_journal.py  test_analysis_json_summary.py  test_analyst_packet_attribution.py  test_audit_refactor_scripts.py  test_auditor_followup.py  test_close_mm_position.py  test_code_quality_refactors.py  test_drawdown_stop.py  test_export_inventory_timeseries.py  test_fetch_market_info.py  test_fetch_rebate_requirements.py  test_fetch_total_pnl.py  test_guard_policy.py  test_institutional_features.py  test_latency_tracker.py  test_log_env_diff.py  test_market_scout_pipeline.py  test_market_screen_json_outputs.py  test_mm_advisor_apply.py  test_mm_advisor_loop.py  test_mm_advisor_submit.py  test_mm_audit_common.py  test_mm_autotune_loop.py  test_mm_order_manager.py  test_mm_public_markets.py  test_mm_risk_manager.py  test_mm_strategy.py  test_mm_trade_journal.py  test_mmctl_config_proposals.py  test_network_resilience.py  test_order_lifecycle_races.py  test_paper_markout.py  test_post_only_safety.py  test_pricing_engine.py  test_production_observability.py  (+5 more)
(+89 files in other folders)
